copy needed driver from klem, modify for raw transission

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
+# emacs files
+*.c~
+*.h~
+
 # Object files
 *.o
-*.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
 
 # Libraries
 *.lib
 *.a
-*.la
-*.lo
 
 # Shared objects (inc. Windows DLLs)
 *.dll
@@ -24,9 +19,3 @@
 *.exe
 *.out
 *.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
